--- a/questioner.html
+++ b/questioner.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
-    <title>Index</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Questioner</title>
 
 </head>
 
@@ -15,10 +15,10 @@
 
 
     <div class="container">
-        <h1 style="margin-bottom: 50px;">Fill out the Questionnaire!</h1>
+        <h1>Questioner</h1>
 
 
-        <a class="btn btn-lg btn-primary" href="questioner.html">Start</a>
+        <!-- <a class="btn btn-primary" href="questioner.html">Start</a> -->
 
 
 
