--- a/questioner.html
+++ b/questioner.html
@@ -15,7 +15,34 @@
 
 
     <div class="container">
-        <h1>Questioner</h1>
+        <h1>Questionnaire</h1>
+
+        <div class="form" style="text-align: left;">
+
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="name" placeholder="John Johnson">
+                <label for="name">Client's Name</label>
+            </div>
+            <div class="form-floating" style="margin-bottom: 15px;">
+                <textarea class="form-control" placeholder="Contact Information" id="contacts"></textarea>
+                <label for="contacts">Client's Contact Information</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="budget" placeholder="John Johnson">
+                <label for="budget">Approximate Budget</label>
+            </div>
+            <select class="form-select" aria-label="Property Type">
+                <option selected>Property Type</option>
+                <option value="1">Flat</option>
+                <option value="2">House</option>
+                <option value="3">Plot</option>
+                <option value="4">Other</option>
+              </select>
+
+
+
+
+        </div>
 
 
         <!-- <a class="btn btn-primary" href="questioner.html">Start</a> -->
