dark theme color fix

--- a/questioner.html
+++ b/questioner.html
@@ -33,10 +33,10 @@
             </div>
             <select class="form-select" aria-label="Property Type">
                 <option selected>Property Type</option>
-                <option value="1">Flat</option>
-                <option value="2">House</option>
-                <option value="3">Plot</option>
-                <option value="4">Other</option>
+                <option value="Flat">Flat</option>
+                <option value="House">House</option>
+                <option value="Plot">Plot</option>
+                <option value="Other">Other</option>
               </select>
 
 
